# OARS

./: .gitignore  Cargo.toml  GIT_in_GIT.md  Getting_Started.md  LICENSE  README.md  build.rs  name.md
.github/workflows/: ci.yml  release.yml
examples/32bit/: console_io.s  constants.s  dot_product.s  fp_test.s  gcd.s  hello.s  linked_list.s  quadratic.s  selection_sort.s
examples/64bit/: array64.s  big_mul64.s  count_bits64.s  fibonacci64.s  fibonacci_big64.s  gauss_sum64.s  hello64.s  mulhi64.s  sum_cubes64.s  word_ops64.s
examples/asm/: bubble_sort.s  csr_benchmark.s  dot_product.s  factorial.s  fibonacci.s  gcd.s  heap_alloc.s  integer_power.s  newton_sqrt.s  quadratic.s  stack_frame.s  string_ops.s
examples/includes/: demo_math.s  demo_strings.s  math_lib.s  string_lib.s
src/: cli.rs  lib.rs  main.rs
src/assembler/: codegen.rs  export.rs  include.rs  lexer.rs  mod.rs  parser.rs  symbol_table.rs
src/gui/: app.rs  highlighter.rs  mod.rs
src/hardware/: csr.rs  fp_registers.rs  memory.rs  mod.rs  registers.rs  registers64.rs
src/isa/: disasm.rs  formats.rs  fp.rs  mod.rs  pseudo.rs  rv32i.rs  rv32m.rs
src/simulator/: backstepper.rs  engine.rs  engine64.rs  mod.rs
src/simulator/syscalls/: mod.rs
src/util/: error.rs  mod.rs
tests/: examples.rs  examples64.rs  golden.rs  includes.rs
tests/golden/: fp_test.txt
tests/programs/: bubble_sort.s  fibonacci.s  fp_test.s  hello.s
