[package]
name    = "oars"
version = "0.1.0"
edition = "2021"
description = "Oxide Assembler and Runtime Simulator — a native RISC-V simulator for students"

[[bin]]
name = "oars"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI deps added in Phase 3:
# eframe  = "0.27"
# egui    = "0.27"
# egui_extras = "0.27"
# egui_code_editor = "0.4"

[profile.release]
opt-level = 3
lto       = true
strip     = true
