[package]
name        = "oars"
version     = "0.2.0"
edition     = "2021"
description = "Oxide Assembler and Runtime Simulator — a native RISC-V simulator for students"
license     = "MIT"
authors     = ["Nathan Hutchins"]
rust-version = "1.75"

[package.metadata.bundle]
name             = "OARS"
identifier       = "edu.etherflow.oars"
icon             = ["assets/icon.ico"]
short_description = "Oxide Assembler and Runtime Simulator for RISC-V"

[[bin]]
name = "oars"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

eframe      = "0.29"
egui        = "0.29"
egui_extras = "0.29"
rfd         = "0.14"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
